chapter_01/Exercise_1.08_Ingress/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-app
  template:
    metadata:
      labels:
        app: logoutput-app
    spec:
      containers:
        - name: logout-app
          image: ilikka/logoutput_app:001
          ports:
            - containerPort: 3000
