chapter_01/Exercise_1.08_Ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-app-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput-app
  ports:
    - name: http
      protocol: TCP
      port: 2345  # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target ports
